# TurboGen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  ReadMe.txt  input.in
correlations/: ReadMe.txt  prelimCalcs.cpp  prelimCalcs.h
include/: Aungier.h  cli.h  common.h  impeller.h  plotter.h  tgParser.h  thermo.h
reference/: GALVAS.f90  a.out
scripts/: correlation.py  inletOptimizationAungier.py  test.py  velTrianglePlot.py
src/: Aungier.cpp  cli.cpp  common.cpp  impeller.cpp  main.cpp  plotter.cpp  tgParser.cpp  thermo.cpp
tmp/: velocities.csv
utils/: CMakeLists.txt
utils/CADfunctions/: CADfunctions.cpp  CADfunctions.h
utils/cmds/: makeBlade.cpp  makeBlade.h
utils/common/: config.cpp  config.h
utils/models/: blade3D.cpp  blade3D.h
